documetaion enhancement